--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="3"
+    android:weightSum="6"
     android:background="#ffffff"
     android:orientation="vertical"
     tools:context="com.moussa.diceroller.MainActivity">
@@ -25,14 +25,14 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level 1 - 3 dice"
-        android:textSize="32sp"
+        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
         android:layout_weight="0.31" />
 
 
     <ImageView
         android:id="@+id/diceImg"
-        android:layout_height="187dp"
+        android:layout_height="165dp"
         android:layout_width="match_parent"
         android:layout_margin="0dp"
         android:src="@drawable/threedice"/>
@@ -77,19 +77,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You scored a 6"
-        android:textSize="32sp"
-        android:layout_gravity="center_horizontal"/>
+        android:text=""
+        android:textSize="20sp"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/scoreText"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Roll"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
-        android:textSize="32sp"
+        android:textSize="16sp"
         android:padding="20dp"
-        android:id="@+id/rollButton"
-        />
-
+        android:background="#4CAF50"
+        android:textColor="#FFF"
+        android:id="@+id/rollButton" />
 
 </LinearLayout>
